# skeleton-cpp

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  docker-compose.ci.yml  docker-compose.yml
.docker/x64/: Dockerfile
.github/workflows/: test.yml
app/: CMakeLists.txt  foobar.cpp
cmake/: config.cmake  dependencies.cmake
include/foo_bar/: lib.h
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  test_foo.cpp
